EXTRA_DIST= __init__.py volume.py utils.py snapshot.py quota.py \
	peer.py parsers.py georep.py bricks.py bitrot.py heal.py \
	nfs_ganesha.py rebalance.py tier.py

cliutilsdir = @BUILD_PYTHON_SITE_PACKAGES@/gluster/cli

cliutils_PYTHON = __init__.py volume.py utils.py snapshot.py quota.py \
	peer.py parsers.py georep.py bricks.py bitrot.py heal.py \
	nfs_ganesha.py rebalance.py tier.py
